--- a/Lab5/Lab5/Lab5.Rmd
+++ b/Lab5/Lab5/Lab5.Rmd
@@ -1,9 +1,11 @@
 ---
 title: "Week-5"
+author: "QuickFixDemos"
 output:
-  pdf_document: default
+  html_document:
+    df_print: paged
   html_notebook: default
-author: QuickFixDemos 
+  pdf_document: default
 ---
 Packages Used Installation
 ```{r}
@@ -29,11 +31,11 @@ Q1: Consider grades earned in each of the courses as random variables and learn 
 ```{r}
 dataset<-read.table("C:/Users/shiva/OneDrive/Desktop/Semester-6/AILab/Lab5/2020_bn_nb_data.txt",head=TRUE,stringsAsFactors=TRUE)
 dataset_grades=dataset
-dataset_grades= subset(dataset_grades, select = -c(QP) )
 dataset_net<-hc(dataset_grades,score="k2")
 dataset_net
 plot(dataset_net)
 ```
+
 Q2: Using the data, learn the CPTs for each course node.
 ```{r}
 dataset_net_bn_fit <- bn.fit(dataset_net, dataset_grades )
@@ -63,12 +65,12 @@ test <- subset(dataset_grades, split == "FALSE")
 naive_bayes_classifier<- naiveBayes(QP ~ ., data = train)
 y_train=predict(naive_bayes_classifier, newdata = train)
 y_prediction <- predict(naive_bayes_classifier, newdata = test)
-print("Train Accuracy")
 cm_train<- table(train$QP, y_train)
-confusionMatrix(cm_train)
-print("Test Accuracy")
+accuracy_train = (cm_train[1,1]+cm_train[2,2])/sum(cm_train)
+print(round(cbind("Train Accuracy" =accuracy_train), 4))
 cm_test <- table(test$QP, y_prediction)
-confusionMatrix(cm_test)
+accuracy_test = (cm_test[1,1]+cm_test[2,2])/sum(cm_test)
+print(round(cbind("Test Accuracy" =accuracy_test), 4))
 ```
 Q4(b): Repeat this experiment for 20 random selection of training and testing data. Report results about the accuracy of your classifier.
 ```{r}
@@ -80,29 +82,32 @@ test <- subset(dataset_grades, split == "FALSE")
 naive_bayes_classifier<- naiveBayes(QP ~ ., data = train)
 y_train=predict(naive_bayes_classifier, newdata = train)
 y_prediction <- predict(naive_bayes_classifier, newdata = test)
-print("Train Accuracy")
 cm_train<- table(train$QP, y_train)
-confusionMatrix(cm_train)
-print("Test Accuracy")
+accuracy_train = (cm_train[1,1]+cm_train[2,2])/sum(cm_train)
+print(round(cbind("Train Accuracy" =accuracy_train), 4))
 cm_test <- table(test$QP, y_prediction)
-confusionMatrix(cm_test)
+accuracy_test = (cm_test[1,1]+cm_test[2,2])/sum(cm_test)
+print(round(cbind("Test Accuracy" =accuracy_test), 4))
 ```
 
 Q5(a): Repeat 4, considering that the grades earned in different courses may be dependent.
 ```{r}
 dataset_grades=dataset
-split <- sample.split(dataset_grades, SplitRatio = 0.7) 
-train <- subset(dataset_grades, split == "TRUE") 
-test <- subset(dataset_grades, split == "FALSE") 
-naive_bayes_classifier<- bn.fit(hc(train, score="k2"), train)
-y_train=predict(naive_bayes_classifier,node="QP", data = train)
+split <- sample.split(dataset_grades, SplitRatio = 0.7)
+train <- subset(dataset_grades, split == "TRUE")
+test <- subset(dataset_grades, split == "FALSE")
+train.hc=suppressWarnings(hc(train, score="k2"))
+plot(train.hc)
+naive_bayes_classifier<- suppressWarnings(bn.fit(train.hc, train))
+y_train <- predict(naive_bayes_classifier,node="QP", data = train)
 y_prediction <- predict(naive_bayes_classifier,node="QP", data = test)
-print("Train Accuracy")
 cm_train<- table(train$QP, y_train)
-confusionMatrix(cm_train)
-print("Test Accuracy")
+accuracy_train = (cm_train[1,1]+cm_train[2,2])/sum(cm_train)
+print(round(cbind("Train Accuracy" =accuracy_train), 4))
 cm_test <- table(test$QP, y_prediction)
-confusionMatrix(cm_test)
+accuracy_test = (cm_test[1,1]+cm_test[2,2])/sum(cm_test)
+print(round(cbind("Test Accuracy" =accuracy_test), 4))
+
 ```
 Q5(b): Repeat this experiment for 20 random selection of training and testing data. Report results about the accuracy of your classifier.
 ```{r}
@@ -111,13 +116,15 @@ dataset_grades=dataset_grades[sample(nrow(dataset_grades), 20), ]
 split <- sample.split(dataset_grades, SplitRatio = 0.7) 
 train <- subset(dataset_grades, split == "TRUE") 
 test <- subset(dataset_grades, split == "FALSE")
-naive_bayes_classifier<- bn.fit(hc(train, score="k2"), train)
-y_train=predict(naive_bayes_classifier,node="QP", data = train)
+train.hc=suppressWarnings(hc(train, score="k2"))
+plot(train.hc)
+naive_bayes_classifier<- suppressWarnings(bn.fit(train.hc, train))
+y_train <- predict(naive_bayes_classifier,node="QP", data = train)
 y_prediction <- predict(naive_bayes_classifier,node="QP", data = test)
-print("Train Accuracy")
 cm_train<- table(train$QP, y_train)
-confusionMatrix(cm_train)
-print("Test Accuracy")
+accuracy_train = (cm_train[1,1]+cm_train[2,2])/sum(cm_train)
+print(round(cbind("Train Accuracy" =accuracy_train), 4))
 cm_test <- table(test$QP, y_prediction)
-confusionMatrix(cm_test)
+accuracy_test = (cm_test[1,1]+cm_test[2,2])/sum(cm_test)
+print(round(cbind("Test Accuracy" =accuracy_test), 4))
 ```
